--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-react-cli": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-export-excel": "^0.5.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-table": "^7.7.0",
