--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.0",
     "generate-react-cli": "^7.1.1",
+    "jspdf": "^2.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-export-excel": "^0.5.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-table": "^7.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
